U630-028: Fix CSS spacing issues with completion notes
and add a space to the 'Declaration: <location>' label on top.

--- a/share/gps.css
+++ b/share/gps.css
@@ -399,9 +399,8 @@ tooltip label {
    border-radius: 0pt;
 }
 
-.completion.notes > frame scrolledwindow {
-   padding: 8pt;
-   border: none;
+.completion.notes frame box {
+   padding: 4pt;
 }
 
 .completion.notes textview.view text {
